--- a/package.json
+++ b/package.json
@@ -2,18 +2,23 @@
   "name": "eslint-plugin-deprecate-import",
   "version": "0.0.0",
   "description": "An ESLint plugin to deprecate import statements",
-  "keywords": ["eslint", "eslintplugin", "eslint-plugin"],
+  "keywords": [
+    "eslint",
+    "eslintplugin",
+    "eslint-plugin"
+  ],
   "author": "findmypast",
   "main": "lib/index.js",
   "scripts": {
     "test": "mocha tests --recursive"
   },
   "dependencies": {
-    "requireindex": "~1.1.0"
+    "requireindex": "~1.2.0"
   },
   "devDependencies": {
-    "eslint": "~3.9.1",
-    "mocha": "^3.1.2"
+    "babel-eslint": "^8.2.3",
+    "eslint": "~4.19.1",
+    "mocha": "^5.1.1"
   },
   "engines": {
     "node": ">=0.10.0"
