--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "devDependencies": {
     "babel-eslint": "^8.2.3",
     "eslint": "~4.19.1",
-    "mocha": "^5.1.1"
+    "mocha": "^5.1.1",
+    "prettier": "^1.13.5"
   },
   "engines": {
     "node": ">=8.0.0"
