--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "eslint-plugin-deprecate-import",
   "version": "1.1.1",
   "description": "An ESLint plugin to deprecate import statements",
-  "keywords": ["eslint", "eslintplugin", "eslint-plugin"],
+  "keywords": [
+    "eslint",
+    "eslintplugin",
+    "eslint-plugin"
+  ],
   "author": "findmypast",
   "repository": {
     "type": "git",
